// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive Site Service when retrieving a dive site will return the requested dive site 1`] = `
{
  "averageDifficulty": 2.02,
  "averageRating": 2.31,
  "createdOn": 2023-07-10T15:43:49.759Z,
  "creator": {
    "avatar": "https://example.com/avatar.jpg",
    "location": "San Diego, CA",
    "logBookSharing": "friends",
    "memberSince": 2024-01-08T13:24:58.620Z,
    "name": "Joe Regular",
    "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac1",
    "username": "Joe.Regular",
  },
  "depth": {
    "depth": 37,
    "unit": "ft",
  },
  "description": "Aut eos ratione qui. Corporis rerum aspernatur repudiandae delectus reprehenderit aspernatur accusamus distinctio excepturi. Magni labore deserunt. Officia ipsam enim occaecati consequuntur ex deserunt tempora minima. Tenetur velit aliquid in sint fuga impedit impedit.",
  "directions": "At facere rem totam. Hic maxime odio recusandae maxime vitae. Dolor odit ad accusantium sunt eaque. Quis accusamus doloremque autem facilis repellat provident. Mollitia modi optio optio.",
  "freeToDive": false,
  "gps": {
    "lat": -20.3328,
    "lon": -5.8212,
  },
  "id": "0117345c-2b6e-4c1a-a9f8-bcfba081be57",
  "location": "Elkhart",
  "name": "Enhanced even",
  "shoreAccess": true,
  "updatedOn": undefined,
}
`;

exports[`Dive Site Service when retrieving multiple dive sites will retrieve several dive sites at once 1`] = `
[
  {
    "id": "0f672534-0510-44ea-876c-43b67c479803",
    "name": "becquerel worst",
  },
  {
    "id": "97e3fa02-8fb8-4923-95f3-33fa8e74b29b",
    "name": "Southeast and",
  },
  {
    "id": "4f23bcb6-18be-4ff2-932c-234cb992bcb7",
    "name": "SUV atop",
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by name in asc order 1`] = `
[
  {
    "name": "Administrator Palladium",
    "rating": 3.79,
  },
  {
    "name": "Architect innovative",
    "rating": 1.19,
  },
  {
    "name": "Auto Coupe",
    "rating": 4.3,
  },
  {
    "name": "Auto Moscovium",
    "rating": 4.13,
  },
  {
    "name": "B2C Hatchback",
    "rating": 4.54,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by name in desc order 1`] = `
[
  {
    "name": "yahoo bluetooth",
    "rating": 4.84,
  },
  {
    "name": "within aspernatur",
    "rating": 4.97,
  },
  {
    "name": "withdrawal and",
    "rating": 1.87,
  },
  {
    "name": "whoa minima",
    "rating": 2.84,
  },
  {
    "name": "wherever because",
    "rating": 4.33,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by rating in asc order 1`] = `
[
  {
    "name": "ivory politely",
    "rating": 1.01,
  },
  {
    "name": "paradigm strategic",
    "rating": 1.03,
  },
  {
    "name": "connect Gasoline",
    "rating": 1.05,
  },
  {
    "name": "male New",
    "rating": 1.06,
  },
  {
    "name": "Electronics redundant",
    "rating": 1.12,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by rating in desc order 1`] = `
[
  {
    "name": "within aspernatur",
    "rating": 4.97,
  },
  {
    "name": "South Country",
    "rating": 4.95,
  },
  {
    "name": "Toyota synergistic",
    "rating": 4.94,
  },
  {
    "name": "Burgs Buckinghamshire",
    "rating": 4.9,
  },
  {
    "name": "Chicken perspiciatis",
    "rating": 4.85,
  },
]
`;

exports[`Dive Site Service when searching dive sites will allow pagination of results 1`] = `
[
  "Shirt program",
  "Soap Renner",
  "Soft Gloves",
  "South Country",
  "South Northeast",
  "South Quality",
  "Southeast and",
  "Southeast sympathetically",
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using long distance 1`] = `
[
  {
    "lat": -71.9617,
    "lon": -117.1325,
  },
  {
    "lat": -70.0749,
    "lon": -116.9587,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using medium distance 1`] = `
[
  {
    "lat": -70.0749,
    "lon": -116.9587,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using short distance 1`] = `
[
  {
    "lat": -70.0749,
    "lon": -116.9587,
  },
]
`;

exports[`Dive Site Service when searching dive sites will perform text-based searches 1`] = `
[
  {
    "averageDifficulty": 3.24,
    "averageRating": 4.35,
    "createdOn": 2023-08-13T03:18:19.212Z,
    "creator": {
      "avatar": "https://example.com/avatar.jpg",
      "location": "San Diego, CA",
      "logBookSharing": "friends",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Joe Regular",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac1",
      "username": "Joe.Regular",
    },
    "depth": {
      "depth": 37,
      "unit": "ft",
    },
    "description": "Amet culpa quos a voluptatem veniam est libero minus dolores. Hic totam sed. Corporis excepturi expedita rem adipisci voluptates eaque possimus blanditiis. Officiis nostrum officiis numquam fuga nam molestiae ea. Aut fugit consectetur perspiciatis veniam quasi iste nihil fugiat voluptatibus.",
    "directions": "Officiis voluptas inventore qui. A ipsam fugiat quibusdam ducimus. Facere quam nihil excepturi quibusdam numquam at tempora. Molestias tempora sapiente est.",
    "freeToDive": true,
    "gps": {
      "lat": -19.3956,
      "lon": -127.1452,
    },
    "id": "33019d60-a338-4711-8209-2e093d9a25bd",
    "location": "Lake Jena",
    "name": "Yen Connecticut",
    "shoreAccess": false,
    "updatedOn": undefined,
  },
  {
    "averageDifficulty": 4.15,
    "averageRating": 3.96,
    "createdOn": 2023-11-09T07:41:02.406Z,
    "creator": {
      "avatar": "https://example.com/other-avatar.jpg",
      "location": "Toronto, ON",
      "logBookSharing": "public",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Other User",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac2",
      "username": "Other.User",
    },
    "depth": {
      "depth": 11,
      "unit": "ft",
    },
    "description": "Quis voluptates iure. Aliquam totam accusantium natus delectus facere repellendus. Quaerat at illum. Illum itaque reprehenderit repellendus vero odit alias tenetur libero animi. Quidem sapiente est mollitia asperiores voluptatum delectus iure.",
    "directions": "Nulla ad voluptates amet maiores quod. Vero sed minima deleniti sit tempore dolore eaque asperiores facere. Esse amet nihil itaque beatae consectetur commodi occaecati rerum.",
    "freeToDive": true,
    "gps": {
      "lat": 41.8275,
      "lon": 59.996,
    },
    "id": "f4839ce7-3b28-4f55-818f-351d060d7855",
    "location": "Lake Adrien",
    "name": "networks navigate",
    "shoreAccess": false,
    "updatedOn": 2023-09-16T17:14:09.559Z,
  },
  {
    "averageDifficulty": 2.76,
    "averageRating": 3.73,
    "createdOn": 2023-05-16T15:32:54.865Z,
    "creator": {
      "avatar": "https://example.com/other-avatar.jpg",
      "location": "Toronto, ON",
      "logBookSharing": "public",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Other User",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac2",
      "username": "Other.User",
    },
    "depth": {
      "depth": 14,
      "unit": "ft",
    },
    "description": "Ut natus occaecati voluptate nostrum enim vitae. Aliquam quos ullam eos iste adipisci nostrum delectus. Impedit vitae hic animi. Est fugiat maiores dolor illum totam illo labore maiores consectetur.",
    "directions": "Corporis ipsa eius pariatur molestiae in illo. Distinctio quod occaecati officia rerum ipsa voluptate ipsam. Et id vero modi cumque. Provident ipsum eaque similique harum voluptatibus ratione. Laboriosam magnam maxime eaque ipsam.",
    "freeToDive": false,
    "gps": {
      "lat": 13.4268,
      "lon": 167.8771,
    },
    "id": "6fb1b1df-f551-4243-9732-85aa09763261",
    "location": "Lake Darrionberg",
    "name": "frictionless niches",
    "shoreAccess": true,
    "updatedOn": 2023-10-04T04:31:17.499Z,
  },
  {
    "averageDifficulty": 4.02,
    "averageRating": 3.6,
    "createdOn": 2023-10-10T20:49:27.364Z,
    "creator": {
      "avatar": "https://example.com/avatar.jpg",
      "location": "San Diego, CA",
      "logBookSharing": "friends",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Joe Regular",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac1",
      "username": "Joe.Regular",
    },
    "depth": {
      "depth": 15,
      "unit": "m",
    },
    "description": "Doloremque facilis modi quia iure debitis ullam eum provident. Possimus dolores similique. Quisquam optio dolore nisi. Dolores iste quis id architecto vel deserunt. Ad reprehenderit natus magni illo autem. Saepe error deserunt placeat dolore nesciunt totam.",
    "directions": "Iste asperiores possimus sint explicabo odit aliquam suscipit aperiam. Soluta neque quo. Laudantium soluta unde cum nisi sunt dolores sint. Sequi quod numquam cupiditate nobis ducimus explicabo minima enim. Distinctio blanditiis saepe accusantium nam. Architecto rem dicta voluptatem dolor quaerat.",
    "freeToDive": undefined,
    "gps": {
      "lat": -48.9886,
      "lon": -64.1108,
    },
    "id": "7affd3c4-7d03-4b97-8376-c6d42584ede5",
    "location": "Lake Brandonbury",
    "name": "Sedan colorfully",
    "shoreAccess": true,
    "updatedOn": 2023-12-07T00:48:07.787Z,
  },
  {
    "averageDifficulty": 4.44,
    "averageRating": 3.48,
    "createdOn": 2023-04-15T02:45:19.766Z,
    "creator": {
      "avatar": "https://example.com/avatar.jpg",
      "location": "San Diego, CA",
      "logBookSharing": "friends",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Joe Regular",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac1",
      "username": "Joe.Regular",
    },
    "depth": {
      "depth": 16,
      "unit": "m",
    },
    "description": "Exercitationem ducimus magnam ullam. Vero soluta perspiciatis voluptatibus neque quibusdam vel ut iure. Totam voluptas rem sint odit voluptatum. Doloremque dignissimos hic. Deserunt ipsam accusantium deserunt impedit.",
    "directions": "Magnam quam dolor ad quo dignissimos eum atque laudantium praesentium. Eius facere temporibus quos voluptatum nisi ratione expedita delectus eius. Fuga quod velit illum dolores repellat sed facere nulla molestias. Eum asperiores quod rem sed totam sapiente.",
    "freeToDive": undefined,
    "gps": {
      "lat": 18.4527,
      "lon": 119.5745,
    },
    "id": "332f9209-51a6-4064-a230-78a6815a35ed",
    "location": "Lake Destineyburgh",
    "name": "reprieve Books",
    "shoreAccess": false,
    "updatedOn": undefined,
  },
  {
    "averageDifficulty": 2.73,
    "averageRating": 3.28,
    "createdOn": 2023-08-08T22:47:09.671Z,
    "creator": {
      "avatar": "https://example.com/avatar.jpg",
      "location": "San Diego, CA",
      "logBookSharing": "friends",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Joe Regular",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac1",
      "username": "Joe.Regular",
    },
    "depth": {
      "depth": 12,
      "unit": "ft",
    },
    "description": "Animi quae consequuntur nihil excepturi. Molestiae id deleniti. Animi dignissimos incidunt amet nostrum alias eius dolor placeat.",
    "directions": "Aliquid aspernatur porro molestias quas modi pariatur. Aliquam quod tempore praesentium reiciendis occaecati dolorum omnis. Odit dolores ullam iure ex molestiae. Fugit reiciendis unde voluptatum minima cumque inventore. Nam eum incidunt ratione quis reprehenderit necessitatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -39.6975,
      "lon": 96.5057,
    },
    "id": "c86e5460-b08a-407c-afd2-40280ea47758",
    "location": "Lake Kenna",
    "name": "Gasoline Generic",
    "shoreAccess": true,
    "updatedOn": 2024-01-29T00:43:46.682Z,
  },
  {
    "averageDifficulty": 3.22,
    "averageRating": 3.26,
    "createdOn": 2023-05-27T19:06:50.335Z,
    "creator": {
      "avatar": "https://example.com/other-avatar.jpg",
      "location": "Toronto, ON",
      "logBookSharing": "public",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Other User",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac2",
      "username": "Other.User",
    },
    "depth": {
      "depth": 39,
      "unit": "ft",
    },
    "description": "Rerum quae exercitationem eum reiciendis. Unde iste rerum nostrum. Fugiat dolor aperiam ad fugit veritatis perspiciatis aperiam. Excepturi itaque repellendus animi tempora consequatur at voluptatibus similique molestiae.",
    "directions": "Quas magnam sunt nostrum nostrum distinctio velit esse possimus ad. Minus modi autem. Provident repellat cum cum vero deserunt non.",
    "freeToDive": undefined,
    "gps": {
      "lat": 9.3944,
      "lon": -84.6564,
    },
    "id": "02eb8740-c1e4-4017-9e86-2dd8329cec8d",
    "location": "Lake Kaleboro",
    "name": "Zloty plum",
    "shoreAccess": false,
    "updatedOn": undefined,
  },
  {
    "averageDifficulty": 3.59,
    "averageRating": 3.19,
    "createdOn": 2024-03-05T17:24:34.957Z,
    "creator": {
      "avatar": "https://example.com/avatar.jpg",
      "location": "San Diego, CA",
      "logBookSharing": "friends",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Joe Regular",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac1",
      "username": "Joe.Regular",
    },
    "depth": {
      "depth": 36,
      "unit": "ft",
    },
    "description": "Ipsa soluta ex. Tempora quam repellat incidunt velit facere. Adipisci reprehenderit possimus nam. Unde ipsa modi tenetur totam quo quos quod. Animi in blanditiis quibusdam.",
    "directions": "Atque sunt dolore assumenda laboriosam. Tempora qui perferendis fuga molestias non aperiam. Nulla harum deleniti saepe quod quia laudantium ipsam recusandae animi. Sit quod accusamus ipsum maxime.",
    "freeToDive": undefined,
    "gps": {
      "lat": -9.9821,
      "lon": -157.358,
    },
    "id": "c3066d0b-ba49-462b-8b18-423bcb1fb646",
    "location": "Lake Landentown",
    "name": "Bicycle italicise",
    "shoreAccess": true,
    "updatedOn": undefined,
  },
  {
    "averageDifficulty": undefined,
    "averageRating": 2.2,
    "createdOn": 2024-02-27T18:45:57.026Z,
    "creator": {
      "avatar": "https://example.com/avatar.jpg",
      "location": "San Diego, CA",
      "logBookSharing": "friends",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Joe Regular",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac1",
      "username": "Joe.Regular",
    },
    "depth": {
      "depth": 34,
      "unit": "m",
    },
    "description": "Reiciendis incidunt ab aut optio. Error ipsa in quisquam quaerat possimus. Voluptatem iusto eaque iure quibusdam sit.",
    "directions": "Ex dolores voluptatibus quis impedit cupiditate. Nostrum labore minima quos necessitatibus voluptatibus doloremque praesentium totam culpa. Impedit maiores exercitationem sit quis temporibus officia. Laborum unde consequuntur dolores.",
    "freeToDive": true,
    "gps": {
      "lat": -24.8061,
      "lon": 61.4843,
    },
    "id": "c6d5a577-0171-4490-aea4-015ad18c99df",
    "location": "Lake Ethyl",
    "name": "North quidem",
    "shoreAccess": true,
    "updatedOn": undefined,
  },
  {
    "averageDifficulty": 4.34,
    "averageRating": undefined,
    "createdOn": 2023-12-10T08:41:14.683Z,
    "creator": {
      "avatar": "https://example.com/other-avatar.jpg",
      "location": "Toronto, ON",
      "logBookSharing": "public",
      "memberSince": 2024-01-08T13:24:58.620Z,
      "name": "Other User",
      "userId": "5a4699d8-48c4-4410-9886-b74b8b85cac2",
      "username": "Other.User",
    },
    "depth": {
      "depth": 31,
      "unit": "ft",
    },
    "description": "Ab ea rerum eligendi magni. Eius doloremque voluptas excepturi. Beatae ut nobis quas accusamus necessitatibus dignissimos natus.",
    "directions": "Doloribus ullam iure hic quibusdam id maiores quae temporibus. Dolor quasi vitae perferendis libero magni. Labore nobis nam eius officiis assumenda placeat. Temporibus quisquam commodi quos. Eveniet voluptatum iure alias enim. Maiores dolorum officia.",
    "freeToDive": true,
    "gps": {
      "lat": 64.2253,
      "lon": 134.3377,
    },
    "id": "f89e1a6b-1095-42d5-9e6b-1e0e22967591",
    "location": "Lake Blair",
    "name": "Diesel calculating",
    "shoreAccess": undefined,
    "updatedOn": undefined,
  },
]
`;
